--- a/Interfaces/Tema 2/practica-02-04/burgos.html
+++ b/Interfaces/Tema 2/practica-02-04/burgos.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Práctica 04</title>
 		<meta charset="utf-8" />
-		<meta name="author" content="tu nombre" />
+		<meta name="author" content="Pedro Plaza Ramos" />
 		<script type="text/javascript">
-			
+
 
 		</script>
 		<style type="text/css">
@@ -26,26 +26,26 @@
 			<h1>Burgos</h1>
 		</header>
 		<nav>
-			
+
 		</nav>
 		<main>
 			<section>
-				<article class="b1">		
+				<article class="b1">
 					<div>
-					Burgos es una ciudad española situada en el norte de la península ibérica, capital de la 
+					Burgos es una ciudad española situada en el norte de la península ibérica, capital de la
 					provincia homónima integrada en la comunidad autónoma de Castilla y León. Cuenta con una
 					población de 179.097 habitantes según los datos demográficos de 2013, repartidos en una
-					superficie de 107,06 km², convirtiéndose en la 36.ª ciudad más poblada de España, y la 
+					superficie de 107,06 km², convirtiéndose en la 36.ª ciudad más poblada de España, y la
 					segunda de la comunidad.
 					</div>
 					<div>
-					Existen pruebas de asentamientos durante el Neolítico y la primera Edad del Hierro en el 
-					cerro del Castillo, el cual domina la ciudad. Sin embargo, se considera que la ciudad fue 
-					fundada como tal por el conde Diego Rodríguez "Porcelos" en el año 884. Hacia el año 930, 
-					se convirtió en capital del condado de Castilla primero dependiente del reino de León e 
+					Existen pruebas de asentamientos durante el Neolítico y la primera Edad del Hierro en el
+					cerro del Castillo, el cual domina la ciudad. Sin embargo, se considera que la ciudad fue
+					fundada como tal por el conde Diego Rodríguez "Porcelos" en el año 884. Hacia el año 930,
+					se convirtió en capital del condado de Castilla primero dependiente del reino de León e
 					independiente después por actuación del conde Fernán González. Fue la capital del reino
-					de Castilla, y de manera intermitente de la Corona de Castilla, desde 1230 hasta el 
-					reinado de los Reyes Católicos. Estos dictaron en la ciudad en 1512 las Leyes de Burgos, 
+					de Castilla, y de manera intermitente de la Corona de Castilla, desde 1230 hasta el
+					reinado de los Reyes Católicos. Estos dictaron en la ciudad en 1512 las Leyes de Burgos,
 					las primeras leyes que la Monarquía Hispánica aplicó en América para organizar su
 					conquista, germen de los actuales Derechos humanos.4 Posteriormente fue la capital de la
 					antigua región histórica de Castilla la Vieja, y primera capital provisional de la
@@ -55,21 +55,21 @@
 				<article class="b2">
 					<div>
 					Cuenta con un anillo verde y un amplio conjunto monumental, entre los cuales destacan la
-					catedral de Santa María, exponente de la arquitectura gótica declarada Patrimonio de la 
+					catedral de Santa María, exponente de la arquitectura gótica declarada Patrimonio de la
 					Humanidad por la UNESCO,5 el monasterio de Santa María la Real de Las Huelgas y la cartuja
-					de Miraflores. Además, la ciudad es atravesada por el Camino de Santiago, otro Patrimonio 
+					de Miraflores. Además, la ciudad es atravesada por el Camino de Santiago, otro Patrimonio
 					de la Humanidad6 y se encuentra a menos de 15 km del yacimiento arqueológico de Atapuerca,
 					también bajo la protección de la UNESCO desde el año 2000.7 El 13 de julio de 2010, abrió
-					sus puertas en la ciudad el Museo de la Evolución Humana, que expone los fósiles más 
+					sus puertas en la ciudad el Museo de la Evolución Humana, que expone los fósiles más
 					importantes hallados en el yacimiento.
 					</div>
 					<div>
-					La ciudad experimentó una fuerte industrialización durante el siglo XX, principalmente en 
-					torno al sector automovilístico y de alimentación, propiciada por su privilegiada 
-					localización geográfica,8 lo que le ha permitido convertirse en un importante nudo de 
+					La ciudad experimentó una fuerte industrialización durante el siglo XX, principalmente en
+					torno al sector automovilístico y de alimentación, propiciada por su privilegiada
+					localización geográfica,8 lo que le ha permitido convertirse en un importante nudo de
 					comunicaciones en el norte de España, tanto de rutas nacionales como internacionales.
-					Estos factores, unidos a un sector terciario desarrollado, con presencia destacada del 
-					turismo, la convierten en la 18.ª ciudad en actividad económica de la nación. 
+					Estos factores, unidos a un sector terciario desarrollado, con presencia destacada del
+					turismo, la convierten en la 18.ª ciudad en actividad económica de la nación.
 					</div>
 				</article>
 			</section>
@@ -117,8 +117,8 @@
 			</section>
 		</main>
 		<footer>
-		
+
 		</footer>
-		
+
 	</body>
 </html>
