--- a/Interfaces/Tema 2/practica-02-04/leon.html
+++ b/Interfaces/Tema 2/practica-02-04/leon.html
@@ -2,7 +2,8 @@
 <html lang="es">
     <head>
         <meta charset="utf-8" />
-		<meta name="author" content="Pedro Plaza Ramos" />	
+		<meta name="author" content="Pedro Plaza Ramos" />
+    <link rel="stylesheet" type="text/css" href="leon.css">
         <title> Práctica 4</title>
 
         <style type="text/css">
