--- a/Interfaces/Tema 2/practica-02-04/burgos.html
+++ b/Interfaces/Tema 2/practica-02-04/burgos.html
@@ -4,6 +4,7 @@
 		<title>Práctica 04</title>
 		<meta charset="utf-8" />
 		<meta name="author" content="Pedro Plaza Ramos" />
+		<link rel="stylesheet" type="text/css" href="burgos.css">
 		<script type="text/javascript">
 
 
