--- a/Interfaces/Tema 2/practica-02-06/cantabria.html
+++ b/Interfaces/Tema 2/practica-02-06/cantabria.html
@@ -4,6 +4,7 @@
        <meta charset="utf-8" />
 	   <title>pruebas diversas </title>
      <link rel="stylesheet" type="text/css" href="cantabria.css">
+     <meta name="author" content="Pedro Plaza Ramos"
 	   <style>
 
 	   </style>
