--- a/Interfaces/Tema 2/practica-02-08/salamanca.html
+++ b/Interfaces/Tema 2/practica-02-08/salamanca.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Práctica 08</title>
 		<meta charset="utf-8" />
-		<meta name="author" content="tu nombren" />
+		<meta name="author" content="Pedro Plaza Ramos" />
 		<script type="text/javascript">
-			
+
 
 		</script>
 		<style type="text/css">
@@ -17,7 +17,7 @@
 			<h1>Salamanca</h1>
 		</header>
 		<nav>
-		
+
 		</nav>
 		<main>
 			<section>
@@ -25,34 +25,34 @@
 					<h2>Medio natural</h2>
 					<div id="natural">
 						<h3>Geografía de contrastes</h3>
-						<div> 
-							Situada en el extremo suroccidental de la región de Castilla y León, la provincia de 
-							Salamanca encierra una sorprendente diversidad paisajística y medioambiental en sus 12.350 
+						<div>
+							Situada en el extremo suroccidental de la región de Castilla y León, la provincia de
+							Salamanca encierra una sorprendente diversidad paisajística y medioambiental en sus 12.350
 							km.2 de superficie.
 						</div>
 						<div>
-							Las amplias llanuras centrales se interrumpen al sur por varias cadenas montañosas y al 
-							noroeste por los cañones del río Duero; ello da lugar a una marcada diferencia altitudinal, 
-							que oscila entre los 130 metros del muelle fluvial de Vega de Terrón, y los más de 2.400 
+							Las amplias llanuras centrales se interrumpen al sur por varias cadenas montañosas y al
+							noroeste por los cañones del río Duero; ello da lugar a una marcada diferencia altitudinal,
+							que oscila entre los 130 metros del muelle fluvial de Vega de Terrón, y los más de 2.400
 							de las cumbres nevadas de la Sierra de Béjar y Candelario, donde aún son visibles las
 							huellas de antiguas glaciaciones.
 						</div>
 						<div>
-							Al formar parte de la meseta, el clima tiene carácter mediterráneo, con rasgos de 
-							continentalidad y ciclos de estaciones bien definidos, es decir, inviernos fríos 
+							Al formar parte de la meseta, el clima tiene carácter mediterráneo, con rasgos de
+							continentalidad y ciclos de estaciones bien definidos, es decir, inviernos fríos
 							y más bien secos y veranos calurosos. Las lluvias resultan más frecuentes en otoño
-							y primavera. 
+							y primavera.
 						</div>"
 						<div>
-							La vegetación muestra, asimismo, una clara biodiversidad. Predominan extensas dehesas de 
-							encina y robles en el centro y oeste (ocupando cerca del 50% de la superficie provincial), 
+							La vegetación muestra, asimismo, una clara biodiversidad. Predominan extensas dehesas de
+							encina y robles en el centro y oeste (ocupando cerca del 50% de la superficie provincial),
 							mientras que las sierras del sur –Gata, Francia y Béjar- se cubren de coníferas y de tupidos
 							bosques de robles y castaños.
 						</div>
 
 						<div>
-							Las tierras más al norte y al este muestran una decidida vocación agraria, con paisajes 
-							dominados por ondulantes campos de cereal. Destaca un magnífico alcornocal, modelo de 
+							Las tierras más al norte y al este muestran una decidida vocación agraria, con paisajes
+							dominados por ondulantes campos de cereal. Destaca un magnífico alcornocal, modelo de
 							aprovechamiento sostenible de los recursos naturales.
 						</div>
 					</div>
@@ -60,31 +60,31 @@
 					<div id="apunte">
 						<h3>Las huellas del tiempo</h3>
 						<div>
-							La presencia humana en los límites de la actual provincia de Salamanca se adentra en el tiempo; 
-							así lo corroboran los grabados paleolíticos de la estación rupestre de Siega Verde (de entre 
+							La presencia humana en los límites de la actual provincia de Salamanca se adentra en el tiempo;
+							así lo corroboran los grabados paleolíticos de la estación rupestre de Siega Verde (de entre
 							10.000 y 20.000 años), o las pinturas prehistóricas esquemáticas del Valle de Las Batuecas.
 						</div>
 						<div>
-							Durante la Edad del Hierro diversas tribus se asentaron en el noroeste y levantaron poblados 
+							Durante la Edad del Hierro diversas tribus se asentaron en el noroeste y levantaron poblados
 							fortificados, los castros, entre los que destacan Las Merchanas, Yecla de Yeltes o Saldeana.
 							Es el Territorio Vetón.
 						</div>
 						<div>
-							La civilización romana dominó a los vetones y dio buenas muestras de su talento en la Vía de 
-							la Plata. La presencia musulmana vació estas tierras, si bien la convivencia propició el 
+							La civilización romana dominó a los vetones y dio buenas muestras de su talento en la Vía de
+							la Plata. La presencia musulmana vació estas tierras, si bien la convivencia propició el
 							nacimiento de la cultura mudéjar, especialmente representativa en la comarca de Peñaranda.
 						</div>
 						<div>
 							En el siglo XII, la repoblación de leoneses, castellanos, francos… dejó sus huellas en topónimos
 							como la Sierra de Francia o Ciudad Rodrigo. El territorio se distribuyó entorno a las villas de
 							señorío y las ciudades de realengo, con un carácter militar que se puede observar en las murallas
-							y castillos de Ledesma, Montemayor del Río, Béjar o Miranda del Castañar. Y también nacieron nuevos 
+							y castillos de Ledesma, Montemayor del Río, Béjar o Miranda del Castañar. Y también nacieron nuevos
 							reinos, como Portugal, y nuevas disputas, origen de las Fortificaciones de Frontera.
 						</div>
 						<div>
-							Con la Edad Moderna se levantaron casas señoriales, iglesias monumentales o fundaciones religiosas 
+							Con la Edad Moderna se levantaron casas señoriales, iglesias monumentales o fundaciones religiosas
 							en los principales núcleos urbanos, como Ciudad Rodrigo, Ledesma o Alba de Tormes. A su vez, son
-							tiempos de confrontaciones europeas; Salamanca ocupó un papel protagonista en la Guerra de la 
+							tiempos de confrontaciones europeas; Salamanca ocupó un papel protagonista en la Guerra de la
 							Independencia, como queda patente en el sitio histórico de la batalla de Los Arapiles.
 						</div>
 					</div>
@@ -94,25 +94,25 @@
 					<div>
 						<h3>Ligados a la tierra</h3>
 						<div>
-							La provincia de Salamanca tiene en la actualidad unos 350.000 habitantes, de los cuales 198.500 
-							aproximadamente viven en alguno de los 361 municipios rurales y el resto en la capital. Se constata 
-							así una dispersión de la población, con algunos centros comarcales como Ciudad Rodrigo, Béjar, 
+							La provincia de Salamanca tiene en la actualidad unos 350.000 habitantes, de los cuales 198.500
+							aproximadamente viven en alguno de los 361 municipios rurales y el resto en la capital. Se constata
+							así una dispersión de la población, con algunos centros comarcales como Ciudad Rodrigo, Béjar,
 							Peñaranda de Bracamonte y Vitigudino.
 						</div>
 						<div>
-							Predomina la actividad agrícola y ganadera, destacando la producción de cereales y leguminosas en el 
-							centro y este, y la cría de vacuno, toro bravo y cerdo ibérico en tierras de dehesa. Guijuelo y su 
+							Predomina la actividad agrícola y ganadera, destacando la producción de cereales y leguminosas en el
+							centro y este, y la cría de vacuno, toro bravo y cerdo ibérico en tierras de dehesa. Guijuelo y su
 							entorno han desarrollado una potente industria chacinera alrededor del exclusivo jamón ibérico.
 						</div>
 						<div>
 							Esta vocación ligada a la tierra se manifiesta en la cultura y en el modo de vida de los salmantinos,
-							así como en ferias y mercados que jalonan el calendario. También se plasma en fiestas y celebraciones, 
+							así como en ferias y mercados que jalonan el calendario. También se plasma en fiestas y celebraciones,
 							donde es omnipresente el toro bravo, protagonista de tentaderos, encierros, tientas y corridas.
 						</div>
 						<div>
-							La identidad salmantina se hace patente en algunos elementos como la Universidad, la Plaza Mayor, el 
-							botón charro, la dehesa y el toro o la típica capa de paño bejarana, por citar algunos. A menudo, el 
-							acervo popular utiliza lo “salmantino” y lo “charro” como sinónimos, aunque no sean del todo 
+							La identidad salmantina se hace patente en algunos elementos como la Universidad, la Plaza Mayor, el
+							botón charro, la dehesa y el toro o la típica capa de paño bejarana, por citar algunos. A menudo, el
+							acervo popular utiliza lo “salmantino” y lo “charro” como sinónimos, aunque no sean del todo
 							equivalentes.
 						</div>
 					</div>
@@ -120,8 +120,8 @@
 			</section>
 		</main>
 		<footer>
-		
+
 		</footer>
-		
+
 	</body>
 </html>
