--- a/Tema 2/practica-02-08/salamanca.html
+++ b/Tema 2/practica-02-08/salamanca.html
@@ -4,6 +4,7 @@
 		<title>Práctica 08</title>
 		<meta charset="utf-8" />
 		<meta name="author" content="Pedro Plaza Ramos" />
+		<link rel="stylesheet" type="text/css" href="salamanca.css">
 		<script type="text/javascript">
 
 
